--- a/css/faqstyle.css
+++ b/css/faqstyle.css
@@ -25,6 +25,10 @@
     border: 1px solid rgb(224, 220, 220);
     border-radius: 10px;
 }
+.contact-method:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0 , 5);
+    cursor: pointer;
+}
 .contact-method label{
     color: #6366f1;
     background-color: white;
